Add score indicator

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -33,11 +33,7 @@
         <div id="status-area">
             <div id="status"></div>
             <div id="player-count" title="Player count">--</div>
-        </div>
-        <div id="score-area">
-            <div>
-                <span class="icon-score"></span><span id="score-text">1</span>
-            </div>
+            <div id="score" title="Score">--</div>
         </div>
         <div id="judge-message-area">
             <span id="judge-message-body"></span>
