Bit of refactoring, start work on game end screen

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -66,8 +66,34 @@
                     <input type="button" value="PLAY" id="btn-play" class="lah-btn hidden" />
             </div>
         </div>
+        <div id="game-end-screen" class="hidden">
+            <div id="game-end-grid">
+                <div id="game-end-heading">
+                    Game Results
+                </div>
+                <div id="game-end-scoreboard">
+
+                </div>                
+                <div id="game-end-trophies-area">
+                    <div id="game-end-trophies-heading">
+                        Trophies
+                    </div>
+                    <div id="game-end-trophies-list">
+                        <div class="trophy" data-trophy-name="Disgusting Motherfucker" data-trophy-desc="What the fuck is wrong with you?">
+                            <div class="trophy-icon"></div>
+                        </div>
+                        <div class="trophy" data-trophy-name="Grandmaster of the Golden Phallus" data-trophy-desc="Awarded only to a true master of dick jokes. Truly the highest honor anyone can ever receive.">
+                                <div class="trophy-icon"></div>
+                        </div>
+                        <div class="trophy" data-trophy-name="Loose Cannon" data-trophy-desc="Probably will end up on the news.">
+                                <div class="trophy-icon"></div>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+        </div>
         <div id="notify-banner" class="fade hidden">
-            <span id="notify-banner-text">You're the Czar.</span>
+            <span id="notify-banner-text">???</span>
         </div>
     </div>
     <div id="modal-no-ws" class="modal hidden">
