--- a/web_content/index.html
+++ b/web_content/index.html
@@ -110,7 +110,7 @@
             </p>
         </div>
     </div>
-    <div id="modal-options" class="modal hidden">
+    <div id="modal-options" class="modal fade hidden">
         <div class="modal-dialog">
             <div class="modal-nav">
                 <button class="modal-close">&times;</button>
@@ -137,7 +137,7 @@
             </div>
         </div>
     </div>
-    <div id="modal-about" class="modal hidden">
+    <div id="modal-about" class="modal fade hidden">
         <div class="modal-dialog">
             <div class="modal-nav">
                 <button class="modal-close">&times;</button>
