Add card upgrade feature, use_packs setting
I also renamed the "blanks" in the card JSON to "pick". I don't know why I originally named it that, but it's fixed now.

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -43,6 +43,7 @@
                 <div id="pending-players" class="stat" data-localize-title="ui_pending_players">--</div>
                 <div id="czar" class="stat" title="Czar" data-localize-title="ui_card_czar">--</div>
                 <div id="score" class="stat" title="Score" data-localize-title="ui_score">--</div>
+                <div id="coins" class="stat" title="Card Coins" data-localize-title="ui_aux_points">--</div>
             </div>
         </div>
         <div id="player-list-area">
@@ -62,7 +63,7 @@
                 <span id="judge-status-card-text"></span>
             </div>
         </div>
-        <div id="play-area">
+        <div id="play-area" class="fade fade-zoom">
             <div class="lah-card-area">
                 <div id="play-cards-scroll-area" class="lah-card-container-outer">
                     <div id="play-cards-area" class="lah-card-container-inner"></div>
@@ -73,7 +74,7 @@
                     class="lah-btn" />
             </div>
         </div>
-        <div id="hand-area">
+        <div id="hand-area" class="fade fade-up">
             <div id="hand-cards-area" class="lah-card-area">
                 <div id="hand-cards-scroll-area" class="lah-card-container-outer">
                     <div id="hand-cards-container" class="lah-card-container-inner"></div>
