--- a/web_content/index.html
+++ b/web_content/index.html
@@ -17,7 +17,7 @@
     <script src="js/lah-strings.js" defer></script>
     <script src="js/common-ui.js" defer></script>
     <script src="js/lah-ui.js" defer></script>
-    <script src="js/lah-ws.js"></script>
+    <script src="js/superior-ws.js"></script>
     <script src="js/lah.js"></script>
     <script src="js/incantate.js"></script>
 </head>
@@ -140,9 +140,9 @@
                             data-localize-placeholder="ui_accent_color_placeholder" autocomplete="off"
                             maxlength="250" />
                     </div>
-                    <div class="lah-separator"></div>
+                    <div class="lah-gap"></div>
                     <div class="lah-listitem">
-                        <div class="lah-hlist lah-align-end">
+                        <div class="lah-hlist lah-push-end">
                             <input type="button" class="lah-btn lah-btn-small" data-localize-value="ui_options_apply"
                                 id="btn-options-apply" onclick="applyOptions()" />
                         </div>
@@ -174,6 +174,56 @@
             </div>
         </div>
     </div>
+    <div id="modal-join" class="modal fade opaque">
+        <div class="modal-dialog">
+            <div class="modal-body">
+                <h1 id="join-screen-title" data-ui-string="ui_game_title"></h1>
+                <p id="join-screen-server-name" data-ui-string="ui_loading"></p>
+                <hr/>
+                <div id="join-stat-grid">
+                    <div class="server-stat" id="join-screen-player-limit">
+                        <span class="value">--</span>
+                        <span class="name" data-ui-string="ui_player_limit"></span>
+                    </div>
+                    <div class="server-stat" id="join-screen-pack-count">
+                        <span class="value">--</span>
+                        <span class="name" data-ui-string="ui_pack_count"></span>
+                    </div>
+                    <div class="server-stat" id="join-screen-black-card-count">
+                            <span class="value">--</span>
+                            <span class="name" data-ui-string="ui_black_card_count"></span>
+                    </div>
+                    <div class="server-stat" id="join-screen-white-card-count">
+                        <span class="value">--</span>
+                        <span class="name" data-ui-string="ui_white_card_count"></span>
+                    </div>
+                </div>
+                <hr/>
+                <div class="lah-gap"></div>
+                <div class="lah-listitem">
+                    <label class="lah-label" data-ui-string="ui_nickname"></label>
+                    <input type="text" id="txt-join-username" class="lah-txtbox wide"
+                        data-localize-placeholder="ui_username_placeholder" autocomplete="off" />
+                </div>
+                <div class="lah-listitem">
+                    <div class="lah-hlist" id="join-controls">
+                        <input type="button" class="lah-btn lah-btn-small" data-localize-value="ui_btn_play_game" id="btn-play-game" />
+                        <input type="button" class="lah-btn lah-btn-small" data-localize-value="ui_btn_spectate_game" id="btn-spectate-game" disabled/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <noscript>
+        <div id="modal-noscript" class="modal opaque">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <h1>JavaScript is disabled.</h1>
+                    <p>I think you know what to do.</p>
+                </div>
+            </div>
+        </div>
+    </noscript>
 </body>
 
 </html>
