Add server info marquee, max_rounds setting

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -198,6 +198,7 @@
                         <span class="name" data-ui-string="ui_white_card_count"></span>
                     </div>
                 </div>
+                <div id="join-marquee" data-marquee-text=""></div>
                 <hr/>
                 <div class="lah-gap"></div>
                 <div class="lah-listitem">
