Add skip voting, improve mobile layout, add new cards

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -54,9 +54,6 @@
         <div id="judge-message-area">
             <span id="judge-message-body"></span>
         </div>
-        <div id="judge-caption-area">
-            <span id="judge-caption"></span>
-        </div>
         <div id="judge-status-card-area">
             <div id="judge-status-card">
                 <span id="judge-status-card-text"></span>
@@ -84,7 +81,9 @@
                     class="lah-btn hidden" />
             </div>
         </div>
-        <div id="black-card-area"></div>
+        <div id="prompt-area">
+            <div id="black-card-area"></div>
+        </div>
         <div id="game-end-screen" class="fade hidden">
             <div id="game-end-grid">
                 <div id="game-end-heading" data-ui-string="ui_game_results">
