Add version number to client

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -157,6 +157,7 @@
             </div>
             <div class="modal-body">
                 <h1>About</h1>
+                <p>Cards Over LAN <span data-ui-string="ui_version"></span></p>
                 <p>This game is a clone of Cards Against Humanity.</p>
                 <p>
                     The original game is available for download or purchase at <a
@@ -175,6 +176,7 @@
     </div>
     <div id="modal-join" class="modal fade opaque">
         <div class="modal-dialog">
+            <span id="join-version" data-ui-string="ui_version"></span>
             <div class="modal-body">
                 <h1 id="join-screen-title" data-ui-string="ui_game_title"></h1>
                 <p id="join-screen-server-name" data-ui-string="ui_loading_info"></p>
