Add "fork me" ribbon

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -175,6 +175,9 @@
         </div>
     </div>
     <div id="modal-join" class="modal fade opaque">
+        <div id="fork-me" class="desktop-only">
+            <a id="fork-me-ribbon" href="https://github.com/TheBerkin/cards-over-lan" target="_blank">Fork me on GitHub</a>
+        </div>
         <div class="modal-dialog">
             <span id="join-version" data-ui-string="ui_version"></span>
             <div class="modal-body">
